# alili

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  README.md  TODOS.md  deploy.sh  docker-compose.yml
.claude/agents/: e2e-test-engineer.md  fastapi-backend-engineer.md  react-tailwind-engineer.md
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  body_parts.py  main.py  pose_analysis.py  pose_detection.py  pose_recognition.py  session_generator.py  session_routes.py  websocket.py
backend/app/services/: __init__.py  gemini_analyzer.py
backend/app/utils/: __init__.py  geometry.py
backend/tests/: conftest.py  test_body_parts.py  test_geometry.py  test_pose_recognition.py  test_session_generator.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActiveSession.css  ActiveSession.tsx  BodyPartSelector.css  BodyPartSelector.tsx  CameraCapture.css  CameraCapture.tsx  OrientationBadge.css  OrientationBadge.tsx  PoseFeedback.css  PoseFeedback.tsx  PoseInfoCard.tsx  PoseOverlay.css  PoseOverlay.tsx  PoseTransition.css  PoseTransition.tsx  SessionComplete.css  SessionComplete.tsx  SessionConfig.css  SessionConfig.tsx  SessionControls.tsx
frontend/src/components/ActiveSession/: ActiveSession.shared.css  ActiveSession.tsx  ActiveSessionDesktop.css  ActiveSessionDesktop.tsx  ActiveSessionMobile.css  ActiveSessionMobile.tsx  index.ts
frontend/src/components/CameraSetup/: CameraSetup.css  CameraSetup.tsx
frontend/src/components/Settings/: Settings.css  Settings.tsx  SettingsButton.css  SettingsButton.tsx
frontend/src/components/Tutorial/: Tutorial.css  Tutorial.tsx
frontend/src/components/Welcome/: Welcome.css  Welcome.tsx
frontend/src/hooks/: useActiveSession.ts  useMobileViewToggle.ts  useOnboarding.ts  usePoseScoring.ts  useSessionTimer.ts  useSpeech.ts
frontend/src/services/: api.ts  sessionService.ts  speechService.ts  websocket.ts
frontend/src/types/: pose.ts  session.ts
frontend/src/utils/: formatting.ts  poseImages.ts  poseOrientations.ts  scoreClassification.ts
